[package]
name = "cascette-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance multi-layer caching for NGDP/CDN content distribution"
readme = "README.md"
keywords = ["cache", "casc", "ngdp", "blizzard", "wow"]
categories = ["caching", "games", "network-programming"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Async runtime and traits (platform-independent)
async-trait = { workspace = true }
futures = { workspace = true }

# Utilities (available on all platforms)
hex = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
md5 = { workspace = true }

# Metrics and monitoring
prometheus = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

# Time and duration utilities
rand = { workspace = true }

# Internal dependencies (WASM-compatible)
cascette-crypto = { version = "0.2.0", path = "../cascette-crypto" }

# Native platform dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time", "sync", "io-util"] }
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }

# Unix-specific dependencies (for fsync)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# WASM platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-compatible tokio - only sync primitives
tokio = { version = "1.47", default-features = false, features = ["sync"] }
# web-sys for LocalStorage and IndexedDB access
web-sys = { version = "0.3", features = [
    "Storage",
    "Window",
    "console",
    # IndexedDB features
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbKeyRange",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbVersionChangeEvent",
    "DomException",
    "DomStringList",
] }
# js-sys for JavaScript types
js-sys = "0.3"

# cascette-formats for WASM
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown")))'.dependencies]
# getrandom for WASM
getrandom = { version = "0.4", features = ["wasm_js"] }
# wasm-bindgen for JS interop
wasm-bindgen = "0.2"
# wasm-bindgen-futures for async JS interop
wasm-bindgen-futures = "0.4"

[features]
default = []
metrics = ["dep:prometheus"]
tracing = ["dep:tracing"]

[package.metadata.cargo-machete]
# Prometheus is an optional dependency used with the metrics feature
ignored = ["prometheus"]

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
