[package]
name = "cascette-crypto"
description = "Cryptographic operations for NGDP/CASC system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["crypto", "casc", "ngdp", "blizzard", "wow"]
categories = ["cryptography", "games"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Hashing
md-5 = "0.10"

# Encryption
salsa20 = "0.10"
cipher = "0.4"
aes-gcm = { version = "0.10", optional = true }
rand = { workspace = true, optional = true }

# Utilities
hex = { workspace = true }

# Optional keyring support
keyring = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { workspace = true, optional = true }

# Binary format handling
binrw = { workspace = true }

[features]
default = []
keyring = ["dep:keyring", "dep:base64", "dep:serde_json"]
file-store = ["dep:aes-gcm", "dep:rand", "dep:keyring", "dep:base64", "dep:serde_json", "dep:chrono", "dep:serde"]

[dev-dependencies]
# Testing framework
criterion = { workspace = true }
fastrand = "2.0"
tempfile = "3.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = { workspace = true }

[package.metadata.cargo-machete]
# These dependencies are used indirectly or for specific features
ignored = ["cipher", "md-5", "rand"]

[lints]
workspace = true
