[package]
name = "cascette-crypto"
description = "Cryptographic operations for NGDP/CASC system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["crypto", "casc", "ngdp", "blizzard", "wow"]
categories = ["cryptography", "games"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Hashing
md-5 = "0.10"

# Encryption
salsa20 = "0.10"
cipher = "0.4"

# Utilities
hex = { workspace = true }

# Binary format handling
binrw = { workspace = true }

[dev-dependencies]
# Testing framework
criterion = { workspace = true }
tempfile = { workspace = true }

[package.metadata.cargo-machete]
# These dependencies are used indirectly or for specific features
ignored = ["cipher", "md-5"]

[lints]
workspace = true
