[package]
name = "cascette-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NGDP/CASC protocol implementation with Ribbit/TACT service discovery and CDN content delivery"
readme = "README.md"
keywords = ["blizzard", "ngdp", "casc", "ribbit", "tact"]
categories = ["network-programming", "game-development", "parsing"]

[dependencies]
# Workspace dependencies (available on all platforms)
thiserror = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
md5 = { workspace = true }
prometheus = { workspace = true }
dashmap = { workspace = true }

# V1 MIME support
mail-parser = { workspace = true }
cms = { workspace = true }
der = { workspace = true }
asn1 = { workspace = true }
x509-cert = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
base64 = { workspace = true }

# Native platform dependencies (tokio with full features, reqwest, internal crates)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
rustls = { workspace = true }
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }
cascette-cache = { version = "0.2.0", path = "../cascette-cache" }
cascette-crypto = { version = "0.2.0", path = "../cascette-crypto" }

# WASM platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-compatible tokio - only sync primitives, no runtime (use wasm-bindgen-futures instead)
# Cannot use workspace = true when overriding default-features
tokio = { version = "1.49", default-features = false, features = ["sync", "macros"] }
# WASM-compatible reqwest (uses web-sys/fetch API instead of native sockets)
reqwest = { version = "0.13", default-features = false, features = ["gzip", "brotli", "deflate", "charset"] }
# getrandom 0.3.x needs "wasm_js" feature for WASM
getrandom = "0.4"
# gloo-timers provides WASM-compatible sleep functionality
gloo-timers = { version = "0.3", features = ["futures"] }
# web-sys for browser APIs (console logging, localStorage for caching)
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }
# WASM-compatible internal dependencies (cascette-crypto, cascette-formats, cascette-cache support WASM)
cascette-crypto = { version = "0.2.0", path = "../cascette-crypto" }
cascette-formats = { version = "0.2.0", path = "../cascette-formats" }
cascette-cache = { version = "0.2.0", path = "../cascette-cache" }
# js-sys for Date.now() timestamp access
js-sys = "0.3"

# Target wasm32-unknown-unknown
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# wasm-bindgen-futures provides async runtime for WASM
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mockall = "0.13"

# Example binaries
[[example]]
name = "wow_classic_native"
path = "examples/wow_classic_native.rs"

[[example]]
name = "wow_classic_wasm"
path = "examples/wow_classic_wasm.rs"

[package.metadata.cargo-machete]
# These dependencies are used for V1 MIME format support and other features
ignored = ["asn1", "async-trait", "cascette-crypto", "digest", "url"]

[lints]
workspace = true
